--- a/profiel.html
+++ b/profiel.html
@@ -9,6 +9,24 @@
 <noscript>Your browser does not support Javascript.</noscript>
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
+        <script>
+            var url = "http://localhost:5820/test/query?reasoning=true"; 
+            var query = "PREFIX ontology: <http://www.example.com/mythical_creatures/> PREFIX dbp: <http://dbpedia.org/property/> SELECT ?subj ?myth ?gender ?habitat ?region ?abs WHERE { ?subj ontology:occursIn ?myth. OPTIONAL { ?subj ontology:hasHabitat ?habitat.  } OPTIONAL {   ?subj ontology:hasGender ?gender .  } OPTIONAL {   ?subj ontology:livesIn ?region .  } OPTIONAL {   ?subj dbp:hasAbstract ?abs .  } }";
+
+            $.ajax({
+                headers : {
+                    Accept: 'application/sparql-results+json'
+                }, 
+                url: url,
+                data: {
+                    query: query
+                },
+                success: function(data) {
+                    var results = data.results.bindings;
+                    console.log(results);
+                }
+            });
+        </script>
 </head>
 
 <body>
