--- a/profiel.html
+++ b/profiel.html
@@ -8,9 +8,10 @@
 <script src="script/script.js"></script>
 <noscript>Your browser does not support Javascript.</noscript>
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  
+<script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
+ <script type="text/javascript" src="https://www.google.com/jsapi"></script> 
         <script>
-            var url = "http://localhost:5820/test#!/query?reasoning=true"; 
+            var url = "http://localhost:5820/test/query?reasoning=true"; 
             var query = "PREFIX ontology: <http://www.example.com/mythical_creatures/> PREFIX dbp: <http://dbpedia.org/property/> SELECT ?subj ?myth ?gender ?habitat ?region ?abs WHERE { ?subj ontology:occursIn ?myth. OPTIONAL { ?subj ontology:hasHabitat ?habitat.  } OPTIONAL {   ?subj ontology:hasGender ?gender .  } OPTIONAL {   ?subj ontology:livesIn ?region .  } OPTIONAL {   ?subj dbp:hasAbstract ?abs .  } }";
 
             $.ajax({
